--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>
       <a href="lakes.html" class="nav__link">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="turnir-2026.html" class="nav__link">Турнір 2026</a>
+      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
@@ -51,7 +51,7 @@
       <div class="card">
         <div class="kpi">
           <span class="num">Лелехівка</span>
-          <a href="events/осінній-короп-2025.html" class="badge badge--warn">Осінній короп</a>
+          <a href="events/osinniy-korop-2025.html" class="badge badge--warn">Осінній короп</a>
         </div>
         <p class="form__hint">Оновлено: 24.10.2025</p>
       </div>
@@ -79,7 +79,7 @@
     <div class="card highlight" style="text-align:center">
       <h2 class="title-gradient">🏆 Турнір STOLAR CARP 2026</h2>
       <p>Сезон із 5 етапів і Фіналом. Результати та рейтинг оновлюються автоматично.</p>
-      <a href="turnir-2026.html" class="btn btn--primary">Переглянути сезон 2026</a>
+      <a href="events/turnir-2026.html" class="btn btn--primary">Переглянути сезон 2026</a>
     </div>
   </section>
 </main>
@@ -96,120 +96,4 @@
 </footer>
 
 </body>
-</html>      <span></span>
-    </button>
-  </div>
-</header>
-  <section class="hero">
-  <div class="container">
-    <h1>STOLAR CARP 2025</h1>
-    <p>Офіційний сайт серії турнірів з карпфішингу у Львівській області...</p>
-  </div>
-  </section>
-  <!-- HEADER автоматично підтягується -->
-  <div id="app-header"></div>
-
-  <main class="main">
-    <section class="container section section--narrow">
-      <h1 class="page-title title-gradient">STOLAR CARP 2025</h1>
-      <p class="lead">
-        Офіційний сайт серії турнірів з карпфішингу у Львівській області.  
-        Реєстрація, регламент, live-протоколи, рейтинг команд та події сезону.
-      </p>
-
-      <div class="cta-row">
-        <a class="btn btn--primary" href="/stolarcarp-site/register.html">Подати заявку</a>
-        <a class="btn btn--ghost" href="/stolarcarp-site/rules.html">Переглянути регламент</a>
-        <a class="btn btn--danger" href="/stolarcarp-site/live.html">Live протокол</a>
-      </div>
-
-      <div class="grid grid-2" style="margin-top:40px">
-        <div class="card">
-          <div class="kpi">
-            <span class="num">Лелехівка</span>
-            <a href="events/осінній-короп-2025.html" class="badge badge--warn">Осінній короп</a>
-          </div>
-          <p class="form__hint">Оновлено: 24.10.2025</p>
-        </div>
-
-        <div class="card">
-          <h3>Благодійність</h3>
-          <p>Частину внесків спрямовуємо на підтримку захисників України 🇺🇦</p>
-          <span class="badge badge--success">Підтримаймо разом</span>
-        </div>
-
-        <div class="card">
-          <h3>Швидкі протоколи</h3>
-          <p>Оновлення результатів до 5 хв після зважування</p>
-          <span class="badge badge--warn">LIVE</span>
-        </div>
-
-        <div class="card">
-          <h3>Спонсори</h3>
-          <p>Trinity Baits,Robin, Puhach Baits, Charbaits, Ібіс, VKK</p>
-        </div>
-      </div>
-
-      <hr style="margin:40px 0; opacity:0.2">
-
-      <div class="card highlight" style="text-align:center;">
-        <h2 class="title-gradient">🏆 Турнір STOLAR CARP 2026</h2>
-        <p>
-          Новий сезон із 5 етапів та фіналом!  
-          Всі результати і рейтинг оновлюються автоматично.
-        </p>
-        <a href="/stolarcarp-site/turnir-2026.html" class="btn btn--primary">Переглянути сезон 2026</a>
-      </div>
-    </section>
-  </main>
-
-  <!-- FOOTER автоматично підтягується -->
-  <div id="app-footer"></div>
-
-</body>
-</html>    <div class="card">
-      <h3>Спонсори</h3>
-      <p>Trinity Baits, Puhach Baits, Robin, Charbaits, Flagman, One Hook Baits, Ібіс, ВКК та інші.</p>
-    </div>
-  </div>
-</section>
-
-<section class="section container">
-  <h2>Останні новини</h2>
-  <div class="grid grid-3">
-    <article class="card"><h3>Stalker 2025</h3><p>Експрес-формат. Усі в рівних умовах: холод чи спека — ловимо свої трофеї!</p></article>
-    <article class="card"><h3>Фінал сезону</h3><p>18 найкращих команд сезону змагаються за першість.</p></article>
-    <article class="card"><h3>Нові партнери</h3><p>Дякуємо брендам, що підтримують карпфішинг у регіоні.</p></article>
-  </div>
-</section>
-</main>
-
-<footer class="footer">
-  <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
-    </div>
-  </div>
-</footer>
-</body>
 </html>
-<style>
-.tag--clickable {
-  background: linear-gradient(90deg, #ffb300, #ff6a00);
-  color: #000;
-  font-weight: 600;
-  text-decoration: none;
-  border-radius: 10px;
-  padding: 4px 10px;
-  transition: 0.25s ease;
-}
-
-.tag--clickable:hover {
-  background: linear-gradient(90deg, #ffce00, #ff8400);
-  transform: scale(1.05);
-  cursor: pointer;
-  box-shadow: 0 0 10px rgba(255, 200, 0, 0.4);
-}
-</style>
