--- a/lakes.html
+++ b/lakes.html
@@ -44,7 +44,7 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>
       <a href="lakes.html" class="nav__link nav__link--active">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="turnir-2026.html" class="nav__link">Турнір 2026</a>
+      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
