--- a/events/turnir-2026.html
+++ b/events/turnir-2026.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="utf-8">
+  <base href="../">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Турнір STOLAR CARP 2026 — сезон, етапи, таймлайн</title>
   <link rel="stylesheet" href="assets/css/main.css">
