--- a/lakes.html
+++ b/lakes.html
@@ -58,7 +58,7 @@
       <!-- Лелехівка -->
       <article class="card lake-card">
         <div class="lake-photo">
-          <img src="активи/ле­лехівка.jpg" alt="Водойма Лелехівка" loading="lazy">
+          <img src="assets/lelehivka.jpg" alt="Водойма Лелехівка" loading="lazy">
           <span class="lake-label">Лелехівка</span>
         </div>
         <div class="lake-body">
@@ -77,7 +77,7 @@
       <!-- Пристань -->
       <article class="card lake-card">
         <div class="lake-photo">
-          <img src="активи/пристань.jpg" alt="Водойма Пристань" loading="lazy">
+          <img src="assets/prystan.jpg" alt="Водойма Пристань" loading="lazy">
           <span class="lake-label">Пристань</span>
         </div>
         <div class="lake-body">
@@ -93,10 +93,10 @@
         </div>
       </article>
 
-      <!-- Bounty (тимчасове фото) -->
+      <!-- Bounty -->
       <article class="card lake-card">
         <div class="lake-photo">
-          <img src="активи/dk-dva-kuma-banner.jpg" alt="Водойма Bounty" loading="lazy">
+          <img src="assets/bounty.jpg" alt="Водойма Bounty" loading="lazy">
           <span class="lake-label">Bounty</span>
         </div>
         <div class="lake-body">
@@ -113,7 +113,7 @@
       </article>
     </div>
   </section>
-</main>
+              </main>
 
 <footer class="footer">
   <div class="container footer__row">
