--- a/lakes.html
+++ b/lakes.html
@@ -62,10 +62,10 @@
           <span class="lake-label">Лелехівка</span>
         </div>
         <div class="lake-body">
-          <p>Класична розбивка на зони A/B/C. 16–24 секторів. Зручний під’їзд і стабільний кльов.</p>
+          <p>Класична розбивка на зони A/B/C. 27 секторів. Зручний під’їзд і стабільний кльов.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
-            <span class="tag">Сектори: 16–24</span>
+            <span class="tag">Сектори: 15-24</span>
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
@@ -84,7 +84,7 @@
           <p>Гарні екземпляри білого амура, чисті береги та зручна інфраструктура для команд.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
-            <span class="tag">Сектори: 18–26</span>
+            <span class="tag">Сектори: 15-24</span>
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
@@ -103,7 +103,7 @@
           <p>Глибокі ділянки та потенціал на Big Fish. Рекомендуємо міцні монтажі.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
-            <span class="tag">Сектори: 14–20</span>
+            <span class="tag">Сектори: 36</span>
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
@@ -117,7 +117,7 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
