--- a/lakes.html
+++ b/lakes.html
@@ -103,7 +103,7 @@
           <p>Глибокі ділянки та потенціал на Big Fish. Рекомендуємо міцні монтажі.</p>
           <div class="tags">
             <span class="tag">Зони: A • B • C</span>
-            <span class="tag">Сектори: 36</span>
+            <span class="tag">Сектори: 15-24</span>
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
