--- a/events/turnir-2026.html
+++ b/events/turnir-2026.html
@@ -61,10 +61,12 @@
   </style>
 </head>
 <body>
+<base href="../">
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span><span class="logo__text">STOLAR CARP</span>
+      <span class="logo__mark">SC</span>
+      <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link">Головна</a>
@@ -72,7 +74,9 @@
       <a href="register.html" class="nav__link">Реєстрація</a>
       <a href="live.html" class="nav__link">Live</a>
       <a href="rating.html" class="nav__link">Рейтинг</a>
-      <a href="turnir-2026.html" class="nav__link nav__link--active">Турнір 2026</a>
+      <a href="lakes.html" class="nav__link">Водойми</a>
+      <a href="sponsors.html" class="nav__link">Спонсори</a>
+      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
