--- a/register.html
+++ b/register.html
@@ -130,7 +130,7 @@
   updateQtyState();
 
   // ===== Надсилання =====
-  const ENDPOINT = "<<< ВСТАВ СЮДИ URL Web App (…/exec) >>>";
+  const ENDPOINT = "https://script.google.com/macros/s/AKfycby_UEGKXSMh0vBBztVSmXQp7eI7z6iRzWF958DVKc1VR6BW9r4bNTEqRo4xsxKFOs9W/exec";
   const btn = document.getElementById('submitBtn');
   const msg = document.getElementById('msg');
   const spinner = document.getElementById('spinner');
