--- a/register.html
+++ b/register.html
@@ -92,7 +92,14 @@
 </footer>
 
 <script>
-  // ===== FP (відбиток пристрою) =====
+  /* ====== Налаштування антиспаму ====== */
+  const MIN_TIME_ON_PAGE_MS = 4000;          // мінімальний час, який треба провести на сторінці (4с)
+  const LOCAL_COOLDOWN_MIN  = 24 * 60;       // локальний кулдаун після успішної заявки (хвилини)
+  const COOLDOWN_KEY        = 'sc_reg_cooldown_until';
+  const DONE_FP_KEY         = 'sc_reg_done_fp';
+  const PAGE_LOADED_AT      = Date.now();
+
+  /* ===== FP (відбиток пристрою) ===== */
   (function setFP(){
     const src = [
       navigator.userAgent,
@@ -106,7 +113,7 @@
     document.getElementById('fp').value = 'fp_'+h.toString(16);
   })();
 
-  // ===== Маска телефону (спрощена) =====
+  /* ===== Маска телефону (спрощена) ===== */
   const phone = document.getElementById('phone');
   phone.addEventListener('input', () => {
     let v = phone.value.replace(/[^\d+]/g,'');
@@ -114,7 +121,7 @@
     phone.value = v;
   });
 
-  // ===== Логіка харчування =====
+  /* ===== Логіка харчування ===== */
   const form = document.getElementById('regForm');
   const foodRadios = [...form.querySelectorAll('input[name="food"]')];
   const qtyInput   = document.getElementById('food_qty');
@@ -129,7 +136,7 @@
   foodRadios.forEach(r => r.addEventListener('change', updateQtyState));
   updateQtyState();
 
-  // ===== Надсилання =====
+  /* ===== Надсилання ===== */
   const ENDPOINT = "https://script.google.com/macros/s/AKfycby_UEGKXSMh0vBBztVSmXQp7eI7z6iRzWF958DVKc1VR6BW9r4bNTEqRo4xsxKFOs9W/exec";
   const btn = document.getElementById('submitBtn');
   const msg = document.getElementById('msg');
@@ -138,35 +145,97 @@
   function setBusy(b){ btn.disabled = b; spinner.classList.toggle('spinner--on', b); }
   function flash(type, text){ msg.className = 'form-msg ' + type; msg.textContent = text; }
 
+  function minsLeft(ts){
+    const ms = (+ts) - Date.now();
+    return Math.max(0, Math.ceil(ms/60000));
+  }
+  function cooldownActive(){
+    const until = localStorage.getItem(COOLDOWN_KEY);
+    return until && Date.now() < +until;
+  }
+
+  // сопоставлення кодів з твого GAS у дружні повідомлення
+  const ERROR_MAP = {
+    LIMIT: 'Ліміт місць вичерпано.',
+    DUPLICATE_TEAM:  'Команда з такою назвою вже зареєстрована.',
+    DUPLICATE_PHONE: 'З цього номера вже подано заявку.',
+    DUPLICATE_DEVICE:'З цього пристрою вже подано заявку.',
+    BAD_TEAM:   'Невірна назва команди.',
+    BAD_CAPTAIN:'Вкажіть капітана.',
+    BAD_PHONE:  'Невірний телефон. Формат: +380XXXXXXXXX.',
+    BAD_MEMBERS:'Кількість учасників: від 1 до 4.',
+    BAD_FOOD_QTY:'Вкажіть кількість порцій 1–20.'
+  };
+
+  let inFlight = false;
+
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
     flash('', '');
-    setBusy(true);
 
+    // анти-даблклік
+    if (inFlight){ return; }
+
+    // перевірка мінімального часу на сторінці
+    if (Date.now() - PAGE_LOADED_AT < MIN_TIME_ON_PAGE_MS){
+      flash('err', 'Будь ласка, заповніть форму уважно і повторіть через кілька секунд.');
+      return;
+    }
+
+    // локальний кулдаун (м’який замок на клієнті)
+    if (cooldownActive()){
+      const left = minsLeft(localStorage.getItem(COOLDOWN_KEY));
+      flash('err', `Заявка вже була надіслана. Спробуйте пізніше (прибл. ${left} хв).`);
+      return;
+    }
+
+    // якщо цей самий пристрій вже реєстрував (після успіху зберігаємо fp)
+    const fp = document.getElementById('fp').value;
+    if (localStorage.getItem(DONE_FP_KEY) === fp){
+      flash('err', 'З цього пристрою вже подано заявку.');
+      return;
+    }
+
+    // стандартні HTML5 перевірки
     if (!form.checkValidity()){
-      setBusy(false);
       flash('err', 'Перевірте обов’язкові поля форми.');
+      form.reportValidity?.();
       return;
     }
     if (form.food.value === 'Так' && !form.food_qty.value){
-      setBusy(false);
       flash('err', 'Вкажіть кількість порцій.');
       return;
     }
 
+    // honeypot (на всяк випадок заповнимо порожнім рядком)
+    form.hp.value = '';
+
+    // технічні поля (для аналітики/беку, якщо захочеш читати)
+    const fd = new FormData(form);
+    fd.append('ts', Date.now().toString());              // timestamp клієнта
+    fd.append('ua', navigator.userAgent.slice(0,200));   // урізаний UA
+
+    inFlight = true; setBusy(true);
     try{
-      const res = await fetch(ENDPOINT, { method:'POST', body:new FormData(form) });
+      const res  = await fetch(ENDPOINT, { method:'POST', body: fd });
       const data = await res.json();
+
       if (data.ok){
         flash('ok', 'Дякуємо! Заявку надіслано та збережено.');
+        // локально запам’ятати успіх: блок до X хвилин + мітка fp
+        const until = Date.now() + LOCAL_COOLDOWN_MIN*60000;
+        localStorage.setItem(COOLDOWN_KEY, until.toString());
+        localStorage.setItem(DONE_FP_KEY, fp);
+
         form.reset(); updateQtyState();
       }else{
-        flash('err', data.error || 'Сталася помилка при надсиланні.');
+        const nice = ERROR_MAP[data.code] || data.error || 'Сталася помилка при надсиланні.';
+        flash('err', nice);
       }
     }catch(err){
       flash('err', 'Не вдалося надіслати форму: ' + err.message);
     }finally{
-      setBusy(false);
+      setBusy(false); inFlight = false;
     }
   });
 </script>
