--- a/register.html
+++ b/register.html
@@ -51,19 +51,27 @@
       </div>
 
       <div class="field">
-  <label for="phone">Номер телефону *</label>
-  <input
-    id="phone"
-    name="phone"
-    type="tel"
-    required
-    inputmode="numeric"
-    autocomplete="tel"
-    placeholder="+380XXXXXXXXX"
-    pattern="^\+380\d{9}$"
-    maxlength="13"
-  />
-  <small class="hint">Формат: +380XXXXXXXXX</small>
+  <label for="phone_rest">Номер телефону *</label>
+
+  <!-- видима частина: префікс +380 + 9 цифр -->
+  <div class="phone-wrap">
+    <span class="phone-prefix">+380</span>
+    <input
+      id="phone_rest"
+      type="text"
+      inputmode="numeric"
+      pattern="\d{9}"
+      maxlength="9"
+      required
+      placeholder="XXXXXXXXX"
+      aria-label="9 цифр після +380"
+    />
+  </div>
+
+  <!-- приховане поле, яке відправляється в форму -->
+  <input type="hidden" id="phone" name="phone" />
+
+  <small class="hint">Введіть 9 цифр після +380 (разом буде +380XXXXXXXXX)</small>
       </div>
 
       <fieldset class="field">
