--- a/sponsors.html
+++ b/sponsors.html
@@ -32,11 +32,11 @@
 <section class="container section">
   <h2>Партнери та спонсори</h2>
   <div class="grid grid-3">
-    <div class="card"><h3>Trinity Baits</h3><p>Основний спонсор сезону.</p></div>
-    <div class="card"><h3>Puhach Baits</h3><p>Підтримка призового фонду.</p></div>
-    <div class="card"><h3>ВКК</h3><p>Клубна підтримка та суддівство.</p></div>
-    <div class="card"><h3>DK Baits</h3><p>Авторські суміші та призи.</p></div>
-    <div class="card"><h3>One Hook Baits</h3><p>Спецнабори для фіналу.</p></div>
+    <div class="card"><h3>Pugach Baits</h3><p>Основний спонсор сезону.</p></div>
+    <div class="card"><h3>Trinity Baits</h3><p>Підтримка призового фонду.</p></div>
+    <div class="card"><h3>Charbaits</h3><p>Якісні призові набори.</p></div>
+    <div class="card"><h3>Flagman</h3><p>Брендові призи.</p></div>
+    <div class="card"><h3>One Hook Baits</h3><p>Преміум серії методів та насадок .</p></div>
     <div class="card"><h3>Інші партнери</h3><p>Дякуємо всім, хто долучився!</p></div>
   </div>
 </section>
