--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>STOLAR CARP — офіційний сайт турнірів</title>
+  <!-- Favicon & App Icon -->
+<link rel="icon" type="image/png" href="assets/favicon.png">
+<link rel="apple-touch-icon" href="assets/favicon.png">
+<meta name="theme-color" content="#1a1a1a">
 
   <!-- Стилі та скрипт меню -->
   <link rel="stylesheet" href="assets/css/main.css">
