--- a/index.html
+++ b/index.html
@@ -82,13 +82,22 @@
 
       <div class="card">
         <h3>Спонсори</h3>
-        <p>Trinity Baits, Robin, Puhach Baits, Charbaits, Ібіс, VKK та інші.</p>
+        <p>Trinity Baits, Flagman, Robin, Puhach Baits, Charbaits, Ібіс, VKK та інші.</p>
       </div>
     </div>
     
 
   </section>
 </main>
+
+  <!-- TikTok Section -->
+<section class="section container highlight" style="text-align:center; padding:60px 0;">
+  <h2 class="title-gradient">🎬 Ми в TikTok</h2>
+  <p>Дивись короткі відео з наших турнірів, зважувань та нагороджень!</p>
+  <a href="https://www.tiktok.com/@stolar.carp" class="btn btn--primary" target="_blank">
+    Перейти у TikTok
+  </a>
+</section>
 
 <!-- FOOTER -->
 <footer class="footer">
