--- a/rules.html
+++ b/rules.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="ук">
+<html lang="uk">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Регламент — STOLAR CARP</title>
+  <meta name="description" content="Офіційний регламент змагань STOLAR CARP: правила участі, суддівство, дисципліна, безпека та контакти організаторів.">
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
 </head>
+
 <body>
 <header class="header">
   <div class="container header__row">
@@ -15,192 +17,140 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-  <a href="index.html" class="nav__link">Головна</a>
-  <a href="rules.html" class="nav__link">Регламент</a>
-  <a href="register.html" class="nav__link">Реєстрація</a>
-  <a href="live.html" class="nav__link">Live</a>
-  <a href="rating.html" class="nav__link">Рейтинг</a>
-  <a href="lakes.html" class="nav__link">Водойми</a>
-  <a href="sponsors.html" class="nav__link">Спонсори</a>
-  <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
-</nav>
+      <a href="index.html" class="nav__link">Головна</a>
+      <a href="rules.html" class="nav__link nav__link--active">Регламент</a>
+      <a href="register.html" class="nav__link">Реєстрація</a>
+      <a href="live.html" class="nav__link">Live</a>
+      <a href="rating.html" class="nav__link">Рейтинг</a>
+      <a href="lakes.html" class="nav__link">Водойми</a>
+      <a href="sponsors.html" class="nav__link">Спонсори</a>
+      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
+    </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
 
 <main class="main">
-<section class="container section">
-  <h2>Регламент змагань STOLAR CARP</h2>
-  <div class="notice">
-    Учасники беруть повну участь у зважуванні: покласти рибу у мішок, зачепити на вагу та випустити рибу. 
-    Це дозволяє судді оперативно внести дані до протоколу.
-  </div>
-
-  <h3>Основні пункти</h3>
-  <ul>
-    <li>Сектори та зони, визначаються жеребкуванням.</li>
-    <li>Можна зайти і почистити свій сектор до старту</li></li>
-    <li>Залік:загальна вага,при однаковій вазі вирішує «Big Fish»</li>
-    <li>Оновлення протоколів на сайті</li>
-    <li>Фінансові умови: внесок не повертається згідно регламенту.</li>
-  </ul>
-  <p class="form__hint">* 🏆 РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP 2025
-
-(універсальний для командних та індивідуальних турнірів)
-
-1. Загальні положення
-
-1.1. Змагання проводяться у форматі «зловив — відпустив».
-1.2. До участі допускаються всі бажаючі рибалки, незалежно від досвіду — як команди, так і одиночні спортсмени (сталкери).
-1.3. Мета турніру — розвиток спортивного карпфішингу, популяризація чесної гри та підтримка Збройних Сил України.
-1.4. Дозволено ловлю на будь-які вудилища з оснастками типу класика або флет (метод), з одним гачком на оснащенні.
-1.5. Змагання проводяться за принципом спортивного та гуманного ставлення до риби.
-1.6. Усі учасники зобов’язані дотримуватись цього регламенту та правил водойми, на якій проходять змагання.
-1.7. Організатор має право вносити зміни у програму чи правила, якщо це не впливає на чесність змагання.
-
-
----
-
-2. Формат участі
-
-2.1. Турніри STOLAR CARP можуть проводитись у двох форматах:
-
-Командний (2–3 учасники на сектор);
-
-Одиночний (STALKER – один спортсмен у секторі).
-2.2. Для обох форматів діють однакові правила поведінки, дисципліни та заліку.
-2.3. Після реєстрації учасники додаються у Viber-групу «STOLAR CARP», де публікується офіційна інформація, зважування та підсумки.
-2.4. Учасники під час змагань повинні бути в манішках, виданих організаторами. Перебування без манішки — жовта картка.
-2.5. Організатор має право відмовити в участі без пояснення причин.
-
-
-
----
-
-3. Поведінка та дисципліна
-
-3.1. Учасники повинні поводитися етично, спокійно та з повагою до інших рибалок, суддів і організаторів.
-3.2. Забороняється:
-
-ловити або годувати за межами свого сектору;
-
-заважати сусідам (надмірний шум, закидання у чужу зону, підсвічування тощо);
-
-вживати алкоголь у великих дозах або перебувати у стані сильного сп’яніння;
-
-проявляти агресію, некоректну поведінку чи неповагу;
-
-приховувати або спотворювати результати вилову.
-3.3. Куріння дозволене лише у межах свого сектору.
-3.4. За порушення етики чи втручання в роботу суддів — попередження, жовта або червона картка.
-3.5. Усі спірні питання вирішує головний суддя або організатор.
-
-
-
----
-
-4. Правила дисципліни
-
-Порушення	Покарання
-
-Вихід за межі сектору без дозволу	Попередження
-Ловля або підгодовування за межами сектору	Жовта картка
-Перебування без манішки	Жовта картка
-Грубе порушення правил водойми	Червона картка / дискваліфікація
-Використання забороненої оснастки (2 гачки, 3 вудилища тощо)	Дискваліфікація
-Агресивна поведінка, грубість, сп’яніння	Миттєва дискваліфікація
-Приховування риби або маніпуляції з результатом	Дискваліфікація
-
-
-👉 Дві жовті картки = дискваліфікація.
-
-
----
-
-5. Суддівство
-
-5.1. Судді контролюють:
-
-дотримання регламенту;
-
-правильність оснащення та поводження з рибою;
-
-зважування й точність результатів.
-5.2. Суддя має право зайти у будь-який сектор у будь-який момент.
-5.3. Рішення головного судді є остаточним і не підлягає оскарженню.
-
-
-
----
-
-6. Безпека та гуманне поводження з рибою
-
-6.1. Обов’язково мати:
-
-короповий мат,
-
-антисептик,
-
-мінімум 5 мішків для риби (по 1 рибі в кожному).
-6.2. Заборонено тримати більше однієї риби в одному мішку.
-6.3. Зважування проводиться в присутності судді, результати фіксуються у протоколі.
-6.4. Фото з рибою дозволене після зважування, після чого риба негайно відпускається у воду.
-6.5. За недбале поводження з рибою або її травмування — жовта чи червона картка.
-
-
-
----
-
-7. Відповідальність учасників
-
-7.1. Кожен спортсмен (чи команда) відповідає за:
-
-дотримання регламенту;
-
-чистоту сектору;
-
-збереження природи й майна водойми.
-7.2. За порушення одним членом команди — відповідає вся команда.
-7.3. Організатор не несе відповідальності за погодні умови, травми чи втрату майна учасників.
-
-
-
----
-
-8. Протести та апеляції
-
-8.1. Протест подається особисто головному судді протягом 30 хвилин після інциденту.
-8.2. Без свідків або доказів протест не розглядається.
-8.3. Рішення суддівської колегії є остаточним.
-
-
----
-
-9. Призи та відзнаки
-
-9.1. Призовий фонд формується організаторами та спонсорами.
-9.2. Основні номінації:
-
-🥇 Загальний переможець турніру (або зона / формат)
-
-🐟 Big Fish — найбільша риба
-
-🤝 Fair Play — спортивна поведінка, приклад для інших
-9.3. Переможці нагороджуються кубками, медалями, сертифікатами та призами від партнерів.
-
-
-
----
-
-10. Контакти
-
-Для участі або уточнення інформації:
-📞 063 173 1116
-📞 097 882 4845
-
-Організатор: команда DK Два Кума
-Проєкт: STOLAR CARP 2025</p>
-</section>
+  <section class="container section">
+    <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
+
+    <div class="notice">
+      Учасники беруть повну участь у зважуванні: покласти рибу в мішок, зачепити на вагу та відпустити у воду.  
+      Це дозволяє судді оперативно внести дані до протоколу.
+    </div>
+
+    <h3>Основні пункти</h3>
+    <ul>
+      <li>Сектори та зони визначаються жеребкуванням.</li>
+      <li>Можна зайти й почистити свій сектор до старту.</li>
+      <li>Залік: загальна вага. При однаковій вазі вирішує «Big Fish».</li>
+      <li>Оновлення протоколів на сайті онлайн.</li>
+      <li>Фінансові умови: внесок не повертається згідно з регламентом.</li>
+    </ul>
+
+    <p class="form__hint">
+      🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP 2025</strong>  
+      (універсальний для командних та індивідуальних турнірів)
+    </p>
+
+    <h3>1. Загальні положення</h3>
+    <ul>
+      <li>Змагання проводяться у форматі «зловив — відпустив».</li>
+      <li>До участі допускаються всі охочі рибалки — як команди, так і одиночні спортсмени (сталкери).</li>
+      <li>Мета турніру — розвиток спортивного карпфішингу, популяризація чесної гри та підтримка ЗСУ.</li>
+      <li>Дозволено ловлю класичною чи флет-оснасткою (1 гачок).</li>
+      <li>Змагання проводяться за принципом гуманного ставлення до риби.</li>
+      <li>Усі учасники зобов’язані дотримуватись регламенту та правил водойми.</li>
+      <li>Організатор може змінювати програму без шкоди чесності змагання.</li>
+    </ul>
+
+    <h3>2. Формат участі</h3>
+    <ul>
+      <li>Формати:  
+        <ul>
+          <li>Командний — 2–3 учасники на сектор;</li>
+          <li>Одиночний (STALKER) — 1 спортсмен.</li>
+        </ul>
+      </li>
+      <li>Для обох форматів діють однакові правила.</li>
+      <li>Після реєстрації учасники додаються у Viber-групу «STOLAR CARP».</li>
+      <li>Під час змагань учасники повинні бути у манішках.</li>
+      <li>Організатор може відмовити в участі без пояснення причин.</li>
+    </ul>
+
+    <h3>3. Поведінка та дисципліна</h3>
+    <ul>
+      <li>Учасники повинні поводитися етично, спокійно й з повагою до інших.</li>
+      <li>Заборонено ловити або годувати за межами сектору, заважати сусідам, вживати алкоголь у великих дозах, проявляти агресію чи приховувати результати.</li>
+      <li>Куріння — лише у межах свого сектору.</li>
+      <li>Порушення етики — жовта або червона картка.</li>
+      <li>Усі спірні питання вирішує головний суддя.</li>
+    </ul>
+
+    <h3>4. Дисциплінарні покарання</h3>
+    <table class="table">
+      <thead>
+        <tr><th>Порушення</th><th>Покарання</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
+        <tr><td>Ловля або підгодовування за межами сектору</td><td>Жовта картка</td></tr>
+        <tr><td>Перебування без манішки</td><td>Жовта картка</td></tr>
+        <tr><td>Грубе порушення правил водойми</td><td>Червона картка / дискваліфікація</td></tr>
+        <tr><td>Заборонена оснастка (2 гачки, 3 вудилища тощо)</td><td>Дискваліфікація</td></tr>
+        <tr><td>Агресивна поведінка, сп’яніння</td><td>Миттєва дискваліфікація</td></tr>
+        <tr><td>Приховування риби чи маніпуляції</td><td>Дискваліфікація</td></tr>
+      </tbody>
+    </table>
+    <p>👉 Дві жовті картки = дискваліфікація.</p>
+
+    <h3>5. Суддівство</h3>
+    <ul>
+      <li>Судді контролюють дотримання правил, оснащення, поводження з рибою та точність результатів.</li>
+      <li>Суддя має право зайти у будь-який сектор у будь-який момент.</li>
+      <li>Рішення головного судді остаточне.</li>
+    </ul>
+
+    <h3>6. Безпека та гуманне поводження</h3>
+    <ul>
+      <li>Обов’язково мати: короповий мат, антисептик, щонайменше 5 мішків для риби.</li>
+      <li>Заборонено тримати більше 1 риби в одному мішку.</li>
+      <li>Зважування лише в присутності судді.</li>
+      <li>Фото — після зважування, рибу відпускають одразу.</li>
+      <li>Недбале поводження — жовта або червона картка.</li>
+    </ul>
+
+    <h3>7. Відповідальність учасників</h3>
+    <ul>
+      <li>Кожен спортсмен відповідає за чистоту сектору, дотримання правил і збереження природи.</li>
+      <li>За порушення одного члена команди відповідає вся команда.</li>
+      <li>Організатор не відповідає за погодні умови чи втрату майна.</li>
+    </ul>
+
+    <h3>8. Протести та апеляції</h3>
+    <ul>
+      <li>Протест подається головному судді протягом 30 хвилин після інциденту.</li>
+      <li>Без доказів протест не розглядається.</li>
+      <li>Рішення суддів остаточне.</li>
+    </ul>
+
+    <h3>9. Призи та відзнаки</h3>
+    <ul>
+      <li>Призовий фонд формується організаторами й спонсорами.</li>
+      <li>Основні номінації:  
+        🥇 Загальний переможець · 🐟 Big Fish · 🤝 Fair Play</li>
+      <li>Переможці отримують кубки, медалі, сертифікати та призи.</li>
+    </ul>
+
+    <h3>10. Контакти</h3>
+    <p>
+      Для участі або уточнення інформації:<br>
+      📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
+      📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
+    </p>
+    <p>Організатор: команда DK Два Кума<br>
+       Проєкт: STOLAR CARP 2025</p>
+  </section>
 </main>
 
 <footer class="footer">
